k8s/base/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels: { app: frontend }
spec:
  type: ClusterIP
  selector: { app: frontend }
  ports:
    - name: http
      port: 80          # порт сервиса внутри кластера
      targetPort: 80    # порт контейнера
